--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
                     android:layout_width="1px"
                     android:layout_height="30dp"
                     android:layout_gravity="center"
-                    android:background="#9C9C9C" />
+                    android:background="#F2F2F2" />
 
                 <TextView
                     android:id="@+id/mainsearch_search_tv"
