--- a/app/src/main/res/layout/store_message.xml
+++ b/app/src/main/res/layout/store_message.xml
@@ -7,8 +7,8 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
-        android:layout_width="600dp"
-        android:layout_height="300dp"
+        android:layout_width="800dp"
+        android:layout_height="400dp"
         android:layout_gravity="center"
         app:cardCornerRadius="5dp">
 
@@ -19,18 +19,20 @@
 
             <ImageView
                 android:id="@+id/store_mes_img"
-                android:layout_width="240dp"
+                android:layout_width="280dp"
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
                 android:src="@drawable/kfc" />
 
             <LinearLayout
+                android:layout_marginLeft="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/store_mes_back"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="right"
@@ -38,41 +40,51 @@
                     android:src="@drawable/cancel" />
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginRight="40dp"
-                    android:text="商店名"
-                    android:textSize="35sp" />
-
-                <TextView
                     android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="40dp"
                     android:layout_marginRight="40dp"
-                    android:text="地点"
-                    android:textSize="30sp" />
+                    android:hint="商店名"
+                    android:textSize="35sp" />
                 <LinearLayout
+                    android:layout_marginTop="40dp"
+                    android:layout_width="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="40dp"
+                        android:layout_marginRight="10dp"
+                        android:hint="地点"
+                        android:textSize="30sp" />
+                    <ImageView
+                        android:layout_gravity="center"
+                        android:src="@drawable/gone2"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_marginTop="40dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <TextView
-                        android:layout_marginTop="20dp"
+
                         android:layout_marginLeft="40dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="30sp"
                         android:text="人均消费："/>
                     <TextView
-                        android:layout_marginTop="20dp"
                         android:layout_marginLeft="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="30sp"
                         android:text="20"/>
                     <TextView
-                        android:layout_marginTop="20dp"
                         android:layout_marginLeft="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -86,15 +98,15 @@
                     android:layout_weight="1"
                     />
                 <Button
+                    android:id="@+id/store_mes_bt"
                     android:layout_marginBottom="20dp"
                     android:layout_marginRight="20dp"
                     android:layout_gravity="right"
-                    android:gravity="bottom"
+                    android:gravity="center"
                     android:text="进入"
-
                     android:textSize="20dp"
-                    android:layout_width="70dp"
-                    android:layout_height="50dp" />
+                    android:layout_width="90dp"
+                    android:layout_height="60dp" />
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
