--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,23 +7,45 @@
     android:layout_height="match_parent"
     tools:context=".Activity.MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1">
 
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <com.baidu.mapapi.map.MapView
+                    android:id="@+id/bmapView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"
+                    android:layout_marginBottom="30dp"
+                    android:layout_weight="1"
+                    android:clickable="true" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/indoorsearch_rv"
+                    android:layout_width="match_parent"
+                    android:layout_height="161dp"
+                    android:visibility="gone">
+                </android.support.v7.widget.RecyclerView>
+            </LinearLayout>
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/seach_ll"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="40dp"
+                android:background="#fff"
+                android:layout_marginRight="40dp"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -57,116 +79,52 @@
                     android:text="搜索"
                     android:textSize="20dp" />
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_below="@+id/seach_ll"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/flight_rv"
+                android:layout_width="100dp"
+                android:layout_marginTop="110dp"
+                android:layout_alignParentRight="true"
+                android:layout_height="161dp"
                 >
-                <com.baidu.mapapi.map.MapView
-                    android:id="@+id/bmapView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"
-                    android:layout_weight="1"
-                    android:layout_marginBottom="30dp"
-                    android:clickable="true" />
-                <android.support.v7.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="242dp"
-                    android:visibility="gone"
-                    android:id="@+id/indoorsearch_rv">
-                </android.support.v7.widget.RecyclerView>
-            </LinearLayout>
+            </android.support.v7.widget.RecyclerView>
+            <!--<ImageButton-->
+                <!--android:layout_width="40dp"-->
+                <!--android:layout_height="40dp"-->
+                <!--android:id="@+id/left_ib"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_marginTop="110dp"-->
+                <!--android:background="@drawable/left" />-->
+            <!--<LinearLayout-->
+                <!--android:layout_width="300dp"-->
+                <!--android:layout_toRightOf="@id/left_ib"-->
+                <!--android:layout_height="200dp"-->
+                <!--android:orientation="vertical">-->
+                <!--<TextView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_weight="1"-->
 
+                    <!--android:text="航班号"/>-->
+                <!--<TextView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:text="登机口"/>-->
+                <!--<TextView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:text="起飞时间"/>-->
+            <!--</LinearLayout>-->
         </RelativeLayout>
 
-        <LinearLayout
-            android:layout_width="300dp"
-            android:layout_height="match_parent"
-            android:background="#44AEBE"
-            android:orientation="vertical">
-
-            <Button
-                android:layout_width="200dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="50dp"
-                android:text="显示个人机票"
-                android:textSize="20dp" />
-
-            <Button
-                android:id="@+id/main_all_tickets"
-                android:layout_width="200dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="50dp"
-                android:text="所有机票"
-                android:textSize="20dp" />
-
-            <Button
-                android:id="@+id/main_guide"
-                android:layout_width="200dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="50dp"
-                android:text="导购"
-                android:textSize="20dp" />
-
-            <Button
-                android:id="@+id/main_entertainment"
-                android:layout_width="200dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="50dp"
-                android:text="娱乐"
-                android:textSize="20dp" />
-
-            <Button
-                android:layout_width="200dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="50dp"
-                android:text="厕所"
-                android:textSize="20dp" />
-
-            <Button
-                android:layout_width="200dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="50dp"
-                android:text="还车"
-                android:textSize="20dp" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/isIndoor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+    <com.liuxin.floatmenulib.view.MenuLayout
+        android:id="@+id/menuLayout"
+        android:layout_width="200dp"
         android:layout_alignParentRight="true"
-        android:text="室内图开关"
-        android:visibility="gone"
-        tools:layout_editor_absoluteX="301dp"
-        tools:layout_editor_absoluteY="26dp" />
+        android:layout_height="match_parent"
+        app:fab_margin_buttom="150dp"
+        app:fab_margin_right="30dp"
+        />
 
-    <!--<Button-->
-    <!--android:id="@+id/indoorsearch_bt"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_centerHorizontal="true"-->
-    <!--android:text="室内搜索" />-->
-    <!--<Button-->
-    <!--android:id="@+id/TTS_Bt"-->
-    <!--android:layout_width="100dp"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_alignParentTop="true"-->
-    <!--android:layout_alignParentRight="true"-->
-    <!--android:layout_marginTop="107dp"-->
-    <!--android:layout_marginRight="0dp"-->
-    <!--android:text="语音播报"-->
-    <!--tools:layout_editor_absoluteX="301dp"-->
-    <!--tools:layout_editor_absoluteY="26dp" />-->
 </RelativeLayout>
