--- a/app/src/main/res/layout/activity_route_planning.xml
+++ b/app/src/main/res/layout/activity_route_planning.xml
@@ -24,17 +24,19 @@
         android:layout_centerVertical="true"
         android:background="@drawable/circleshape"
         android:text="开始导航" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/shape">
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="100dp"-->
+        <!--android:layout_marginLeft="20dp"-->
+        <!--android:layout_marginTop="40dp"-->
+        <!--android:layout_marginRight="20dp"-->
+        <!--android:background="@drawable/shape">-->
     <ImageButton
         android:id="@+id/routeplanning_back_ib"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="40dp"
         android:layout_gravity="center"
         android:background="@drawable/left"
         />
@@ -44,7 +46,7 @@
             <!--android:layout_height="match_parent"-->
             <!--android:background="@null"/>-->
 
-    </LinearLayout>
+    <!--</LinearLayout>-->
 
 
 </RelativeLayout>
