--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,14 +79,9 @@
                     android:text="搜索"
                     android:textSize="20dp" />
             </LinearLayout>
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/flight_rv"
-                android:layout_width="100dp"
-                android:layout_marginTop="110dp"
-                android:layout_alignParentRight="true"
-                android:layout_height="161dp"
-                >
-            </android.support.v7.widget.RecyclerView>
+
+
+
             <!--<ImageButton-->
                 <!--android:layout_width="40dp"-->
                 <!--android:layout_height="40dp"-->
@@ -126,5 +121,82 @@
         app:fab_margin_buttom="150dp"
         app:fab_margin_right="30dp"
         />
+    <LinearLayout
 
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="110dp"
+        android:layout_width="wrap_content"
+        android:orientation="horizontal"
+        android:layout_height="230dp">
+
+        <ImageView
+            android:id="@+id/main_left"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:src="@drawable/newleft" />
+        <LinearLayout
+            android:background="#8FFFFFFF"
+            android:id="@+id/main_message"
+            android:layout_marginRight="30dp"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_marginTop="30dp"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="25sp"
+                    android:layout_marginRight="10dp"
+                    android:text="航班号:"/>
+                <TextView
+                    android:textSize="20sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="das32131"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_marginTop="30dp"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="25sp"
+                    android:layout_marginRight="10dp"
+                    android:text="登机口:"/>
+                <TextView
+                    android:textSize="20sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="A3"/>
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_marginTop="30dp"
+
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="25sp"
+                    android:layout_marginRight="10dp"
+                    android:text="起飞时间:"/>
+                <TextView
+                    android:textSize="20sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="2019-01-02"/>
+            </LinearLayout>
+
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
