--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -34,7 +34,7 @@
               android:layout_marginLeft="15dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:text="月售"
+              android:text=""
               android:textSize="20sp"/>
           <TextView
               android:id="@+id/food_sale"
