--- a/app/src/main/res/layout/item_fresco.xml
+++ b/app/src/main/res/layout/item_fresco.xml
@@ -10,7 +10,8 @@
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/sdv_item_fresco_content"
+        android:scaleType="fitXY"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:placeholderImage="@drawable/image_1"/>
+        app:placeholderImage="@drawable/timg"/>
 </android.support.v7.widget.CardView>
