新增蓝牙模块

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,6 +8,20 @@
     tools:context=".Activity.Login.LoginActivity"
     android:background="#ABC4D8EC">
     <LinearLayout
+        android:layout_marginTop="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/login_blueTooth"
+            android:text="成功连接"
+            android:textSize="25sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
@@ -31,4 +45,4 @@
             android:layout_height="350dp" />
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
