--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -156,6 +156,7 @@
                     android:text="航班号:"/>
                 <TextView
                     android:textSize="20sp"
+                    android:id="@+id/flight_number_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="das32131"/>
@@ -174,6 +175,7 @@
                     android:text="登机口:"/>
                 <TextView
                     android:textSize="20sp"
+                    android:id="@+id/gate_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="A3"/>
@@ -192,6 +194,7 @@
                     android:text="起飞时间:"/>
                 <TextView
                     android:textSize="20sp"
+                    android:id="@+id/departmenttime_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="2019-01-02"/>
