--- a/app/src/main/res/layout/activity_shopping.xml
+++ b/app/src/main/res/layout/activity_shopping.xml
@@ -33,19 +33,26 @@
                 android:background="@drawable/circle"
                 android:layout_gravity="right"
                 android:layout_marginTop="-30dp"
+                android:id="@+id/tohere_ll"
                 android:layout_marginRight="40dp"
                 android:orientation="vertical"
-                android:layout_width="60dp"
-                android:layout_height="60dp">
+                android:layout_width="80dp"
+                android:layout_height="80dp">
                 <com.makeramen.roundedimageview.RoundedImageView
-                    android:id="@+id/shopping_love_img"
                     android:layout_marginTop="10dp"
                     android:layout_width="40dp"
                     android:layout_gravity="center"
                     android:scaleType="centerInside"
                     android:layout_height="40dp"
-                    android:src="@drawable/heart"
+                    android:src="@drawable/tohere"
                     app:riv_oval="true" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:textSize="15dp"
+                    android:text="到这去"/>
             </LinearLayout>
 
 
