--- a/app/src/main/res/layout/store_message.xml
+++ b/app/src/main/res/layout/store_message.xml
@@ -46,6 +46,7 @@
                     android:layout_marginLeft="40dp"
                     android:layout_marginRight="40dp"
                     android:hint="商店名"
+                    android:id="@+id/store_name_tv"
                     android:textSize="35sp" />
                 <LinearLayout
                     android:layout_marginTop="40dp"
@@ -58,8 +59,10 @@
                         android:layout_marginLeft="40dp"
                         android:layout_marginRight="10dp"
                         android:hint="地点"
+                        android:id="@+id/store_location_tv"
                         android:textSize="30sp" />
                     <ImageView
+                        android:id="@+id/nav_bt"
                         android:layout_gravity="center"
                         android:src="@drawable/gone2"
                         android:layout_width="30dp"
@@ -83,6 +86,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="30sp"
+                        android:id="@+id/averconsumption_tv"
                         android:text="20"/>
                     <TextView
                         android:layout_marginLeft="5dp"
