--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -115,12 +115,13 @@
 
     <com.liuxin.floatmenulib.view.MenuLayout
         android:id="@+id/menuLayout"
-        android:layout_width="200dp"
-        android:layout_alignParentRight="true"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="0dp"
+        android:background="@null"
         app:fab_margin_buttom="150dp"
-        app:fab_margin_right="30dp"
-        />
+        app:fab_margin_right="80dp" />
     <LinearLayout
 
         android:layout_alignParentRight="true"
