--- a/app/src/main/res/layout/return_car_fragment.xml
+++ b/app/src/main/res/layout/return_car_fragment.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:background="#fff"
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<android.support.v7.widget.CardView
     android:layout_width="400dp"
     android:layout_height="200dp"
     android:layout_gravity="center"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-<android.support.v7.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     app:cardCornerRadius="10dp"
     app:cardElevation="10dp">
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
+        android:layout_width="400dp"
+        android:layout_height="200dp">
         <TextView
             android:layout_marginTop="40dp"
             android:layout_gravity="center"
@@ -30,7 +31,7 @@
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="(请教小车放在黑线上)"/>
+            android:text="(请将小车放在黑线上)"/>
         <LinearLayout
             android:layout_marginTop="40dp"
             android:layout_gravity="bottom"
