--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -25,6 +25,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="#A4F0F0F0"
             android:orientation="vertical">
 
             <cn.bingoogolapple.bgabanner.BGABanner
