--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -26,6 +26,7 @@
                     android:text="尊敬的用户："
                     android:textSize="20sp"/>
                 <TextView
+                    android:id="@+id/message_people_id"
                     android:paddingLeft="30dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -184,68 +185,10 @@
                     android:text="全部航班信息"
                     android:textSize="25sp"/>
             </LinearLayout>
-            <LinearLayout
-                android:background="#DFF1F1F1"
-                android:orientation="horizontal"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/message_rv"
                 android:layout_width="match_parent"
-                android:layout_marginTop="10dp"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:paddingLeft="8dp"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="ZJH7-1"
-                    android:textSize="30sp"/>
-                <TextView
-                    android:paddingLeft="8dp"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="南京"
-                    android:textSize="30sp"/>
-                <TextView
-                    android:paddingLeft="8dp"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="上海"
-                    android:textSize="30sp"/>
-                <TextView
-                    android:paddingLeft="8dp"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="7-17 16:40"
-                    android:textSize="30sp"/>
-
-                <TextView
-                    android:paddingLeft="8dp"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="7-17 18:40"
-                    android:textSize="30sp"/>
-                <TextView
-                    android:paddingLeft="8dp"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="A2"
-                    android:textSize="30sp"/>
-            </LinearLayout>
+                android:layout_height="wrap_content"/>
         </LinearLayout>
     </ScrollView>
 
