--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -7,7 +7,7 @@
     android:background="#fff">
   <ImageView
       android:id="@+id/food_img"
-      android:src="@drawable/image_1"
+      android:src="@drawable/kfc"
       android:layout_width="150dp"
       android:layout_height="150dp"
       android:layout_marginLeft="20dp"
