--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent">
     <View
         android:layout_width="match_parent"
@@ -11,6 +11,6 @@
 
     <com.xiao.nicevideoplayer.NiceVideoPlayer
         android:id="@+id/nice_video_player"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"/>
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
